<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="?colorSurfaceVariant"
    android:minHeight="56dp"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                style="@style/ThemeOverlay.Material3.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/scheduler_schedule_name_label" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/options_contrainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/save_action"
            app:layout_constraintTop_toBottomOf="@id/name_input_layout">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/tool_corpsefinder_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/corpsefinder_tool_name" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/tool_systemcleaner_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/systemcleaner_tool_name" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/tool_appcleaner_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appcleaner_tool_name" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/remove_action"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="?colorErrorContainer"
            android:text="@string/general_remove_action"
            android:textColor="?colorOnErrorContainer"
            app:icon="@drawable/ic_delete"
            app:iconTint="?colorOnErrorContainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/options_contrainer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_action"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/general_save_action"
            app:icon="@drawable/ic_baseline_save_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/options_contrainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <eu.darken.sdmse.common.progress.ProgressOverlayView
        android:id="@+id/loading_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>