<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DashboardCardItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/sdm_normal"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:id="@+id/title"
            android:layout_marginStart="8dp"
            android:text="@string/general_advice_title"
            style="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/primary"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/scheduler_battery_optimization_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dismiss_action"
            style="@style/SDMButton.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_dismiss_action"
            android:textColor="?colorOnSecondaryContainer"
            app:iconTint="?colorOnSecondaryContainer"
            app:layout_constraintBottom_toBottomOf="@id/fix_action"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/fix_action" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fix_action"
            style="@style/DashboardCardButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/general_fix_action"
            app:icon="@drawable/ic_battery_lock_open_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/dismiss_action"
            app:layout_constraintTop_toBottomOf="@id/primary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>