<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DashboardCardItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/corpsefinder_dashboard_card_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subtitle"
            style="@style/TextAppearance.Material3.LabelSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Data belonging to already removed apps."
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/status_primary"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Scanning"
            app:layout_constraintEnd_toEndOf="@id/subtitle"
            app:layout_constraintStart_toStartOf="@id/subtitle"
            app:layout_constraintTop_toBottomOf="@id/subtitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/status_secondary"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="/storage/emulated/0"
            app:layout_constraintEnd_toEndOf="@id/status_primary"
            app:layout_constraintStart_toStartOf="@id/status_primary"
            app:layout_constraintTop_toBottomOf="@id/status_primary" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/details_action"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/general_show_details_action"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_secondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_action"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="?colorError"
            android:text="@string/general_delete_action"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/scan_action"
            app:layout_constraintTop_toBottomOf="@id/status_secondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scan_action"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/general_scan_action"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_secondary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>